Added nullability constructs to Vanara.PInvoke.Shared

--- a/PInvoke/Shared/Handles/HANDLE.tt
+++ b/PInvoke/Shared/Handles/HANDLE.tt
@@ -217,7 +217,7 @@ public struct <#= name #> : <#= inheritance #>
 	public static bool operator ==(<#= name #> h1, <#= name #> h2) => h1.Equals(h2);
 
 	/// <inheritdoc/>
-	public override bool Equals(object obj) => obj is <#= name #> h && handle == h.handle;
+	public override bool Equals(object? obj) => obj is <#= name #> h && handle == h.handle;
 
 	/// <inheritdoc/>
 	public override int GetHashCode() => handle.GetHashCode();
