--- a/PInvoke/Shared/Handles/HANDLE.tt
+++ b/PInvoke/Shared/Handles/HANDLE.tt
@@ -215,6 +215,18 @@ public readonly struct <#= name #> : <#= inheritance #>
 	/// <returns>The result of the operator.</returns>
 	public static bool operator ==(<#= name #> h1, <#= name #> h2) => h1.Equals(h2);
 
+#if !NETSTANDARD
+	/// <summary>Implements the operator <see langword="true"/>.</summary>
+	/// <param name="hMem">The value.</param>
+	/// <returns>The result of the operator.</returns>
+	public static bool operator true(<#= name #> hMem) => !hMem.IsInvalid;
+
+	/// <summary>Implements the operator <see langword="false"/>.</summary>
+	/// <param name="hMem">The value.</param>
+	/// <returns>The result of the operator.</returns>
+	public static bool operator false(<#= name #> hMem) => hMem.IsInvalid;
+#endif
+
 	/// <inheritdoc/>
 	public override bool Equals(object? obj) => obj is <#= name #> h && handle == h.handle;
 
